--- a/makefile.dictionary
+++ b/makefile.dictionary
@@ -54,13 +54,13 @@ PAT_GRAPHIC_S_OBJ_H=$(PAT_GAME_OBJ)/GraphicStaticObject.h
 PAT_GRAPHIC_S_OBJ_CPP=$(PAT_GAME_OBJ)/GraphicStaticObject.cpp
 PAT_GRAPHIC_S_O=$(FILE_OBJECTS_FOLDER)/PAT_GraphicSO.o
 
-PAT_ANIMATED_S_OBJ_H=$(PAT_GAME_OBJ)/AnimatedStaticObjec.h
-PAT_ANIMATED_S_OBJ_CPP=$(PAT_GAME_OBJ)/AnimatedStaticObjec.cpp
+PAT_ANIMATED_S_OBJ_H=$(PAT_GAME_OBJ)/AnimatedStaticObjestc.h
+PAT_ANIMATED_S_OBJ_CPP=$(PAT_GAME_OBJ)/AnimatedStaticObjestc.cpp
 PAT_ANIMATED_S_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimatedSO.o
 
-PAT_ANIMATED_K_OBJ_H=$(PAT_GAME_OBJ)/AnimatedKineticObjec.h
-PAT_ANIMATED_K_OBJ_CPP=$(PAT_GAME_OBJ)/AnimatedKineticObjec.cpp
-PAT_ANIMATED_K_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimatedKO.o
+PAT_ANIMATED_K_OBJ_H=$(PAT_GAME_OBJ)/AnimatedKineticObject.h
+PAT_ANIMATED_K_OBJ_CPP=$(PAT_GAME_OBJ)/AnimatedKineticObject.cpp
+PAT_ANIMATED_K_OBJ_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimatedKO.o
 
 #Graphic Folder
 PAT_GRAPHICS=$(PAT_FOLDER)/Graphics
@@ -70,7 +70,7 @@ PAT_SPRITE=$(FILE_OBJECTS_FOLDER)/PAT_Sprite.cpp
 
 PAT_ANIMATION_M_H=$(PAT_GRAPHICS)/AnimationManager.h
 PAT_ANIMATION_M_CPP=$(PAT_GRAPHICS)/AnimationManager.cpp
-PAT_ANIMATION_M=$(FILE_OBJECTS_FOLDER)/PAT_AnimationM.cpp
+PAT_ANIMATION_M_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimationM.o
 
 #Scene folder
 PAT_SCENE=$(PAT_FOLDER)/Scene
@@ -88,11 +88,3 @@ PAT_GAME_H=$(PAT_GAME)/PAT_Game.h
 PAT_GAME_CPP=$(PAT_GAME)/PAT_Game.cpp
 PAT_GAME_O=$(FILE_OBJECTS_FOLDER)/PAT_Game.o
 
-.PHONY:
-#$(PAT_SCREEN) $(PAT_SPRITE)
-
-#$(PAT_SCREEN): $(PAT_SCREEN_CPP) $(PAT_SCREEN_H)
-#	$(CC) $(COMPILER_FLAGS) $(I_SCREEN) $(LINKER_FLAGS) $< -o $@
-
-#$(PAT_SPRITE): $(PAT_SPRITE_CPP) $(PAT_SPRITE_H)
-#	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $< -o $@
