--- a/makefile.pa_amb_tomaquet_rules
+++ b/makefile.pa_amb_tomaquet_rules
@@ -32,13 +32,22 @@ $(PAT_SCENE_O): $(PAT_SCENE_H)
 	$(CC) $(COMPILER_FLAGS) \
 	$(LINKER_FLAGS) -x c++ $< -o $@
 
+$(PAT_GRAPHIC_S_O): $(PAT_GRAPHIC_S_OBJ_CPP) $(PAT_GRAPHIC_S_OBJ_H)
+	$(CC) $(COMPILER_FLAGS) \
+	-I$(PAT_MATH) -I$(PAT_GRAPHICS) -I$(PAT_UTILS) \
+	$(LINKER_FLAGS) $< -o $@
 
+$(PAT_ANIMATED_K_OBJ_O): $(PAT_ANIMATED_K_OBJ_CPP) $(PAT_ANIMATED_K_OBJ_H)
+	$(CC) $(COMPILER_FLAGS) \
+	-I$(PAT_MATH) -I$(PAT_GRAPHICS) -I$(PAT_UTILS) \
+	$(LINKER_FLAGS) $< -o $@
 
-.PHONY:
-#$(PAT_SCREEN) $(PAT_SPRITE)
+$(PAT_ANIMATION_M_O): $(PAT_ANIMATION_M_CPP) $(PAT_ANIMATION_M_H)
+	$(CC) $(COMPILER_FLAGS) \
+	-I$(PAT_UTILS) \
+	$(LINKER_FLAGS) $< -o $@
 
-#$(PAT_SCREEN): $(PAT_SCREEN_CPP) $(PAT_SCREEN_H)
-#	$(CC) $(COMPILER_FLAGS) $(I_SCREEN) $(LINKER_FLAGS) $< -o $@
+$(PAT_VECTOR2D_O): $(PAT_VECTOR2D_CPP) $(PAT_VECTOR2D_H)
+	$(CC) $(COMPILER_FLAGS) \
+	$(LINKER_FLAGS) $< -o $@
 
-#$(PAT_SPRITE): $(PAT_SPRITE_CPP) $(PAT_SPRITE_H)
-#	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $< -o $@
