--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -50,6 +50,12 @@ D_PLAYER_CPP=./GameObjects/Player/Player.cpp
 D_PLAYER_H=./GameObjects/Player/Player.h
 D_PLAYER=$(FILE_OBJECTS_FOLDER)/Player.o
 
+D_PLAYER_S_H=./GameObjects/Player/States/PlayerState.h
+D_PLAYER_S=$(FILE_OBJECTS_FOLDER)/PlayerS.o
+
+D_PLAYER_S_MOVE_H=./GameObjects/Player/States/PlayerMoveS.h
+D_PLAYER_S_MOVE=$(FILE_OBJECTS_FOLDER)/PlayerSMove.o
+
 D_SCENE_C_CPP=./Input/DemoSceneController.cpp
 D_SCENE_C_H=./Input/DemoSceneController.h
 D_SCENE_C=$(FILE_OBJECTS_FOLDER)/DemoSceneController.o
@@ -68,7 +74,8 @@ PAT_OBJECTS=$(PAT_GAME_O) $(PAT_SCREEN_O) $(PAT_SCENE_M_O) $(PAT_SCENE_O) \
 	$(PAT_GRAPHIC_S_O)
 
 DEMO_OBJECTS=$(MAIN) $(DEMO) $(D_SCENE_M) $(D_SCENE) $(D_PLAYER) $(D_SCENE_C) \
-	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_PAUSE_C) $(D_TITLE)
+	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_PAUSE_C) $(D_TITLE) $(D_PLAYER_S) \
+	$(D_PLAYER_S_MOVE)
 
 TARGET=NIGHISHIKOI_DEMO.out
 #$@ is a macro that refers to the target
@@ -101,18 +108,21 @@ $(D_SCENE): $(D_SCENE_CPP) $(D_SCENE_H)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_SCENE) -I$(PAT_UTILS) -I$(PAT_GAME_OBJ) -I./Input \
 	-I$(PAT_INPUT) -I./GameObjects/Player/ -I$(PAT_MATH) \
+	-I./GameObjects/Player/States/ \
 	-I$(PAT_GRAPHICS) \
 	$(LINKER_FLAGS) $< -o $@
 
 $(D_PLAYER): $(D_PLAYER_CPP) $(D_PLAYER_H)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_GAME_OBJ) -I$(PAT_MATH) -I$(PAT_GRAPHICS) -I$(PAT_UTILS) \
+	-I./GameObjects/Player/ -I./GameObjects/Player/States/ \
 	$(LINKER_FLAGS) $< -o $@
 
 $(D_SCENE_C): $(D_SCENE_C_CPP) $(D_SCENE_C_H)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_INPUT) -I./GameObjects/Player/ -I$(PAT_GAME_OBJ) -I$(PAT_MATH) \
 	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) -I$(PAT_SCENE) -I./Scene/Pause/ \
+	-I./GameObjects/Player/States/ \
 	$(LINKER_FLAGS) $< -o $@
 
 $(D_SCENE_P): $(D_SCENE_P_CPP) $(D_SCENE_P_H)
@@ -136,6 +146,17 @@ $(D_TITLE): $(D_TITLE_CPP) $(D_TITLE_H)
 	-I$(PAT_GAME_OBJ) \
 	$(LINKER_FLAGS) $< -o $@
 
+$(D_PLAYER_S): $(D_PLAYER_S_H)
+	$(CC) $(COMPILER_FLAGS) \
+	$(LINKER_FLAGS) -x c++ $< -o $@
+
+$(D_PLAYER_S_MOVE): $(D_PLAYER_S_MOVE_H)
+	@echo "1$(D_PLAYER_S_MOVE)"
+	@echo "2$(D_PLAYER_S_MOVE_H)"
+	$(CC) $(COMPILER_FLAGS) \
+	-I./GameObjects/Player/ -I$(PAT_GAME_OBJ)  -I$(PAT_MATH) \
+	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) -I./GameObjects/Player/States/ \
+	$(LINKER_FLAGS) -x c++ $< -o $@
 
 include $(PAT_FOLDER)/makefile.pa_amb_tomaquet_rules
 
