tests added utils added

--- a/makefile.dictionary
+++ b/makefile.dictionary
@@ -39,6 +39,10 @@ PAT_LINKED_LIST=$(FILE_OBJECTS_FOLDER)/PAT_LinkedList.o
 PAT_STACK_H=$(PAT_UTILS)/Stack.h
 PAT_STACK=$(FILE_OBJECTS_FOLDER)/PAT_Stack.o
 
+PAT_UTILS_H=$(PAT_UTILS)/PAT_Utils.h
+PAT_UTILS_CPP=$(PAT_UTILS)/PAT_Utils.cpp
+PAT_UTILS_O=$(PAT_UTILS)/PAT_Utils.o
+
 #Math folder
 PAT_MATH=$(PAT_FOLDER)/Math
 PAT_VECTOR2D_H=$(PAT_MATH)/Vector2D.h
