--- a/makefile.pa_amb_tomaquet_rules
+++ b/makefile.pa_amb_tomaquet_rules
@@ -51,3 +51,7 @@ $(PAT_VECTOR2D_O): $(PAT_VECTOR2D_CPP) $(PAT_VECTOR2D_H)
 	$(CC) $(COMPILER_FLAGS) \
 	$(LINKER_FLAGS) $< -o $@
 
+$(PAT_UTILS_O): $(PAT_UTILS_CPP) $(PAT_UTILS_H)
+	$(CC) $(COMPILER_FLAGS) \
+	$(LINKER_FLAGS) $< -o $@
+
