--- a/Tests/makefile
+++ b/Tests/makefile
@@ -24,19 +24,31 @@ FILE_OBJECTS_FOLDER=./FileObjects
 
 include $(PAT_FOLDER)/makefile.dictionary
 
+T_PAT_UTILS=./Utils/T_PAT_Utils.cpp
+
 TESTS_CPP=./Tests.cpp
 TESTS=$(FILE_OBJECTS_FOLDER)/Tests.o
 
-OBJECTS= $(TESTS)
+T_OBJECTS= $(TESTS)
+PAT_OBJECTS= $(PAT_UTILS_O)
 
 TARGET=Tests.out
 
-$(TARGET): $(OBJECTS)
-	$(CC) -g $(OBJECTS) -o $@
+$(TARGET): $(T_OBJECTS)
+	$(CC) -g \
+	$(T_OBJECTS) \
+	$(PAT_OBJECTS) \
+	-o $@
 
-$(TESTS): $(TESTS_CPP)
-	$(CC) -I./Catch1/ -I./TEST2/ $(COMPILER_FLAGS) $< -o $@
+$(TESTS): $(T_PAT_UTILS) $(TESTS_CPP)
+	$(CC) \
+	-I./Catch1/ -I./TEST2/ -I./Utils/ -I$(PAT_UTILS) \
+	$(COMPILER_FLAGS) $(TESTS_CPP)  -o $@
 
+
+.PHONY: $(T_PAT_UTILS)
+
+$(T_PAT_UTILS): $(PAT_UTILS_H) $(PAT_UTILS_CPP)
 
 include $(PAT_FOLDER)/makefile.pa_amb_tomaquet_rules
 
