--- a/makefile.dictionary
+++ b/makefile.dictionary
@@ -45,8 +45,8 @@ PAT_UTILS_O=$(PAT_UTILS)/PAT_Utils.o
 
 #Math folder
 PAT_MATH=$(PAT_FOLDER)/Math
-PAT_VECTOR2D_H=$(PAT_MATH)/Vector2D.h
-PAT_VECTOR2D_CPP=$(PAT_MATH)/Vector2D.cpp
+PAT_VECTOR2D_H=$(PAT_MATH)/PAT_Vector2D.h
+PAT_VECTOR2D_CPP=$(PAT_MATH)/PAT_Vector2D.cpp
 PAT_VECTOR2D_O=$(FILE_OBJECTS_FOLDER)/PAT_Vector2D.o
 
 #GameObjects folder
