--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -71,7 +71,7 @@ D_PAUSE_C=$(FILE_OBJECTS_FOLDER)/PauseController.o
 
 PAT_OBJECTS=$(PAT_GAME_O) $(PAT_SCREEN_O) $(PAT_SCENE_M_O) $(PAT_SCENE_O) \
 	$(PAT_ANIMATED_K_OBJ_O) $(PAT_ANIMATION_M_O) $(PAT_VECTOR2D_O) \
-	$(PAT_GRAPHIC_S_O) $(PAT_UTILS_O)
+	$(PAT_GRAPHIC_S_O) $(PAT_MATH_UTILS_O)
 
 DEMO_OBJECTS=$(MAIN) $(DEMO) $(D_SCENE_M) $(D_SCENE) $(D_PLAYER) $(D_SCENE_C) \
 	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_PAUSE_C) $(D_TITLE) $(D_PLAYER_S) \
