--- a/makefile.dictionary
+++ b/makefile.dictionary
@@ -39,15 +39,16 @@ PAT_LINKED_LIST=$(FILE_OBJECTS_FOLDER)/PAT_LinkedList.o
 PAT_STACK_H=$(PAT_UTILS)/Stack.h
 PAT_STACK=$(FILE_OBJECTS_FOLDER)/PAT_Stack.o
 
-PAT_UTILS_H=$(PAT_UTILS)/PAT_Utils.h
-PAT_UTILS_CPP=$(PAT_UTILS)/PAT_Utils.cpp
-PAT_UTILS_O=$(PAT_UTILS)/PAT_Utils.o
 
 #Math folder
 PAT_MATH=$(PAT_FOLDER)/Math
 PAT_VECTOR2D_H=$(PAT_MATH)/PAT_Vector2D.h
 PAT_VECTOR2D_CPP=$(PAT_MATH)/PAT_Vector2D.cpp
 PAT_VECTOR2D_O=$(FILE_OBJECTS_FOLDER)/PAT_Vector2D.o
+
+PAT_MATH_UTILS_H=$(PAT_MATH)/PAT_MathUtils.h
+PAT_MATH_UTILS_CPP=$(PAT_MATH)/PAT_MathUtils.cpp
+PAT_MATH_UTILS_O=$(FILE_OBJECTS_FOLDER)/PAT_MathUtils.o
 
 #GameObjects folder
 PAT_GAME_OBJ=$(PAT_FOLDER)/GameObjects
