--- a/makefile.pa_amb_tomaquet_rules
+++ b/makefile.pa_amb_tomaquet_rules
@@ -49,10 +49,10 @@ $(PAT_ANIMATION_M_O): $(PAT_ANIMATION_M_CPP) $(PAT_ANIMATION_M_H)
 
 $(PAT_VECTOR2D_O): $(PAT_VECTOR2D_CPP) $(PAT_VECTOR2D_H)
 	$(CC) $(COMPILER_FLAGS) \
-	-I$(PAT_UTILS) \
+	-I$(PAT_MATH) \
 	$(LINKER_FLAGS) $< -o $@
 
-$(PAT_UTILS_O): $(PAT_UTILS_CPP) $(PAT_UTILS_H)
+$(PAT_MATH_UTILS_O): $(PAT_MATH_UTILS_CPP) $(PAT_MATH_UTILS_H)
 	$(CC) $(COMPILER_FLAGS) \
 	$(LINKER_FLAGS) $< -o $@
 
