--- a/makefile.dictionary
+++ b/makefile.dictionary
@@ -73,6 +73,10 @@ PAT_SPRITE_H=$(PAT_GRAPHICS)/Sprite.h
 PAT_SPRITE_CPP=$(PAT_GRAPHICS)/Sprite.cpp
 PAT_SPRITE=$(FILE_OBJECTS_FOLDER)/PAT_Sprite.cpp
 
+PAT_ANIMATION_H=$(PAT_GRAPHICS)/PAT_Animation.h
+PAT_ANIMATION_CPP=$(PAT_GRAPHICS)/PAT_Animation.cpp
+PAT_ANIMATION_O=$(FILE_OBJECTS_FOLDER)/PAT_Animation.o
+
 PAT_ANIMATION_M_H=$(PAT_GRAPHICS)/AnimationManager.h
 PAT_ANIMATION_M_CPP=$(PAT_GRAPHICS)/AnimationManager.cpp
 PAT_ANIMATION_M_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimationM.o
