--- a/makefile.pa_amb_tomaquet_rules
+++ b/makefile.pa_amb_tomaquet_rules
@@ -47,6 +47,11 @@ $(PAT_ANIMATION_M_O): $(PAT_ANIMATION_M_CPP) $(PAT_ANIMATION_M_H)
 	-I$(PAT_UTILS) \
 	$(LINKER_FLAGS) $< -o $@
 
+$(PAT_ANIMATION_O): $(PAT_ANIMATION_CPP) $(PAT_ANIMATION_H)
+	$(CC) $(COMPILER_FLAGS) \
+	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) \
+	$(LINKER_FLAGS) $< -o $@
+
 $(PAT_VECTOR2D_O): $(PAT_VECTOR2D_CPP) $(PAT_VECTOR2D_H)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_MATH) \
