--- a/makefile.dictionary
+++ b/makefile.dictionary
@@ -77,8 +77,8 @@ PAT_ANIMATION_H=$(PAT_GRAPHICS)/PAT_Animation.h
 PAT_ANIMATION_CPP=$(PAT_GRAPHICS)/PAT_Animation.cpp
 PAT_ANIMATION_O=$(FILE_OBJECTS_FOLDER)/PAT_Animation.o
 
-PAT_ANIMATION_M_H=$(PAT_GRAPHICS)/AnimationManager.h
-PAT_ANIMATION_M_CPP=$(PAT_GRAPHICS)/AnimationManager.cpp
+PAT_ANIMATION_M_H=$(PAT_GRAPHICS)/PAT_AnimationManager.h
+PAT_ANIMATION_M_CPP=$(PAT_GRAPHICS)/PAT_AnimationManager.cpp
 PAT_ANIMATION_M_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimationM.o
 
 #Scene folder
