--- a/Tests/makefile
+++ b/Tests/makefile
@@ -37,7 +37,7 @@ PAT_OBJECTS= $(PAT_MATH_UTILS_O) $(PAT_VECTOR2D_O)
 
 TARGET=Tests.out
 
-$(TARGET): $(T_OBJECTS) $(PAT_OBJECTS)
+$(TARGET): $(PAT_OBJECTS) $(T_OBJECTS)
 	$(CC) -g \
 	$(T_OBJECTS) \
 	$(PAT_OBJECTS) \
