--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -21,7 +21,7 @@ PAT_FOLDER=..
 # path to target file objects folder
 FILE_OBJECTS_FOLDER=./FileObjects
 
-include $(PAT_FOLDER)/makefile.dictionary
+include $(PAT_FOLDER)/makefile.pa_amb_tomaquet_dictionary
 
 MAIN_CPP=Main/Main.cpp
 MAIN=$(FILE_OBJECTS_FOLDER)/Main.o
@@ -61,9 +61,9 @@ D_SCENE_C=$(FILE_OBJECTS_FOLDER)/DemoSceneController.o
 include ./GameObjects/Player/makefile.player_dictionary
 
 PAT_OBJECTS=$(PAT_GAME_O) $(PAT_SCREEN_O) $(PAT_SCENE_M_O) $(PAT_SCENE_O) \
-	$(PAT_ANIMATED_K_OBJ_O) $(PAT_ANIMATION_M_O) $(PAT_VECTOR2D_O) \
-	$(PAT_GRAPHIC_S_O) $(PAT_MATH_UTILS_O) $(PAT_ANIMATION_O)
-
+	$(PAT_VECTOR2D_O) $(PAT_A_OBJ_STATE_O) $(PAT_GRAPHIC_S_OBJ_O) \
+	$(PAT_GRAPHIC_S_O) $(PAT_MATH_UTILS_O) $(PAT_ANIMATION_O) \
+	$(PAT_STATE_OBJ_O)
 DEMO_OBJECTS=$(MAIN) $(DEMO) $(D_SCENE_M) $(D_SCENE) $(D_PLAYER) $(D_SCENE_C) \
 	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_PAUSE_C) $(D_TITLE) $(D_PLAYER_S) \
 	$(D_PLAYER_S_MOVE) $(D_PLAYER_S_IDLE) $(D_PLAYER_A_IDLE) \
@@ -98,17 +98,19 @@ $(D_SCENE_M): $(D_SCENE_M_CPP) $(D_SCENE_M_H)
 
 $(D_SCENE): $(D_SCENE_CPP) $(D_SCENE_H)
 	$(CC) $(COMPILER_FLAGS) \
-	-I$(PAT_SCENE) -I$(PAT_UTILS) -I$(PAT_GAME_OBJ) -I./Input \
-	-I$(PAT_INPUT) -I./GameObjects/Player/ -I$(PAT_MATH) \
-	-I./GameObjects/Player/States/ \
-	-I$(PAT_GRAPHICS) \
+	-I$(PAT_SCENE) -I$(PAT_UTILS) -I$(PAT_GAME_OBJ) \
+	-I$(PAT_ANIM_KIN_OBJ) -I$(PAT_ANIM_OBJ) -I$(PAT_INPUT) \
+	-I$(PAT_GRAPHICS) -I$(PAT_MATH) \
+	-I./Input -I./GameObjects/Player/ \
+	-I./GameObjects/Player/States/ -I./GameObjects/Player/Animations/ \
 	$(LINKER_FLAGS) $< -o $@
 
 $(D_SCENE_C): $(D_SCENE_C_CPP) $(D_SCENE_C_H)
 	$(CC) $(COMPILER_FLAGS) \
-	-I$(PAT_INPUT) -I./GameObjects/Player/ -I$(PAT_GAME_OBJ) -I$(PAT_MATH) \
-	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) -I$(PAT_SCENE) -I./Scene/Pause/ \
-	-I./GameObjects/Player/States/ \
+	-I$(PAT_ANIM_KIN_OBJ) -I$(PAT_INPUT) -I$(PAT_GAME_OBJ) -I$(PAT_MATH) \
+	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) -I$(PAT_SCENE) -I$(PAT_ANIM_OBJ) \
+	 -I./GameObjects/Player/ -I./Scene/Pause/ \
+	-I./GameObjects/Player/States/ -I./GameObjects/Player/Animations/ \
 	$(LINKER_FLAGS) $< -o $@
 
 $(D_SCENE_P): $(D_SCENE_P_CPP) $(D_SCENE_P_H)
@@ -131,6 +133,7 @@ $(D_TITLE): $(D_TITLE_CPP) $(D_TITLE_H)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_GAME_OBJ) \
 	$(LINKER_FLAGS) $< -o $@
+
 
 include ./GameObjects/Player/makefile.player_rules
 
