--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -56,13 +56,13 @@ D_PAUSE_TEXT_CPP=./Scene/Pause/PauseText.cpp
 D_PAUSE_TEXT_H=./Scene/Pause/PauseText.h
 D_PAUSE_TEXT=$(FILE_OBJECTS_FOLDER)/PauseText.o
 
-D_PAUSE_C_CPP=./Scene/Pause/PauseController.cpp
-D_PAUSE_C_H=./Scene/Pause/PauseController.h
-D_PAUSE_C=$(FILE_OBJECTS_FOLDER)/PauseController.o
+#D_PAUSE_C_CPP=./Scene/Pause/PauseController.cpp
+#D_PAUSE_C_H=./Scene/Pause/PauseController.h
+#D_PAUSE_C=$(FILE_OBJECTS_FOLDER)/PauseController.o
 
-D_SCENE_C_CPP=./Input/DemoSceneController.cpp
-D_SCENE_C_H=./Input/DemoSceneController.h
-D_SCENE_C=$(FILE_OBJECTS_FOLDER)/DemoSceneController.o
+#D_SCENE_C_CPP=./Input/DemoSceneController.cpp
+#D_SCENE_C_H=./Input/DemoSceneController.h
+#D_SCENE_C=$(FILE_OBJECTS_FOLDER)/DemoSceneController.o
 
 include ./GameObjects/Player/makefile.player_dictionary
 
@@ -70,8 +70,8 @@ PAT_OBJECTS=$(PAT_GAME_O) $(PAT_SCREEN_O) $(PAT_SCENE_M_O) $(PAT_SCENE_O) \
 	$(PAT_VECTOR2D_O) $(PAT_A_OBJ_STATE_O) $(PAT_GRAPHIC_S_OBJ_O) \
 	$(PAT_GRAPHIC_S_O) $(PAT_MATH_UTILS_O) $(PAT_ANIMATION_O) \
 	$(PAT_STATE_OBJ_O)
-DEMO_OBJECTS=$(MAIN) $(DEMO) $(D_SCENE_M) $(D_SCENE) $(D_PLAYER) $(D_SCENE_C) \
-	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_PAUSE_C) $(D_TITLE) $(D_PLAYER_S) \
+DEMO_OBJECTS=$(MAIN) $(DEMO) $(D_SCENE_M) $(D_SCENE) $(D_PLAYER) \
+	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_TITLE) $(D_PLAYER_S) \
 	$(D_PLAYER_S_MOVE) $(D_PLAYER_S_IDLE) $(D_PLAYER_A_IDLE) \
 	$(D_PLAYER_A_M) $(D_PLAYER_A_MOVE) \
 
@@ -99,7 +99,7 @@ $(DEMO): $(DEMO_CPP) $(DEMO_H)
 $(D_SCENE_M): $(D_SCENE_M_CPP) $(D_SCENE_M_H)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_INPUT) -I$(PAT_SCENE) -I$(PAT_UTILS) -I$(PAT_GAME_OBJ) \
-	-I./Scene/Demo \
+	-I./Scene/Demo -I./Scene/Pause \
 	$(LINKER_FLAGS) $< -o $@
 
 $(D_SCENE): $(D_SCENE_CPP) $(D_SCENE_H)
@@ -109,15 +109,16 @@ $(D_SCENE): $(D_SCENE_CPP) $(D_SCENE_H)
 	-I$(PAT_GRAPHICS) -I$(PAT_MATH) \
 	-I./Input -I./GameObjects/Player/ \
 	-I./GameObjects/Player/States/ -I./GameObjects/Player/Animations/ \
+	-I./Scene/Pause/ \
 	$(LINKER_FLAGS) $< -o $@
 
-$(D_SCENE_C): $(D_SCENE_C_CPP) $(D_SCENE_C_H)
-	$(CC) $(COMPILER_FLAGS) \
-	-I$(PAT_ANIM_KIN_OBJ) -I$(PAT_INPUT) -I$(PAT_GAME_OBJ) -I$(PAT_MATH) \
-	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) -I$(PAT_SCENE) -I$(PAT_ANIM_OBJ) \
-	 -I./GameObjects/Player/ -I./Scene/Pause/ \
-	-I./GameObjects/Player/States/ -I./GameObjects/Player/Animations/ \
-	$(LINKER_FLAGS) $< -o $@
+#$(D_SCENE_C): $(D_SCENE_C_CPP) $(D_SCENE_C_H)
+#	$(CC) $(COMPILER_FLAGS) \
+#	-I$(PAT_ANIM_KIN_OBJ) -I$(PAT_INPUT) -I$(PAT_GAME_OBJ) -I$(PAT_MATH) \
+#	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) -I$(PAT_SCENE) -I$(PAT_ANIM_OBJ) \
+#	-I./GameObjects/Player/ -I./Scene/Pause/ \
+#	-I./GameObjects/Player/States/ -I./GameObjects/Player/Animations/ \
+#	$(LINKER_FLAGS) $< -o $@
 
 $(D_SCENE_P): $(D_SCENE_P_CPP) $(D_SCENE_P_H)
 	$(CC) $(COMPILER_FLAGS) \
@@ -130,10 +131,10 @@ $(D_PAUSE_TEXT): $(D_PAUSE_TEXT_CPP) $(D_PAUSE_TEXT_CPP)
 	-I$(PAT_INPUT) -I$(PAT_GAME_OBJ) \
 	$(LINKER_FLAGS) $< -o $@
 
-$(D_PAUSE_C): $(D_PAUSE_C_CPP) $(D_PAUSE_C_CPP)
-	$(CC) $(COMPILER_FLAGS) \
-	-I$(PAT_GAME_OBJ) -I$(PAT_INPUT) \
-	$(LINKER_FLAGS) $< -o $@
+#$(D_PAUSE_C): $(D_PAUSE_C_CPP) $(D_PAUSE_C_CPP)
+#	$(CC) $(COMPILER_FLAGS) \
+#	-I$(PAT_GAME_OBJ) -I$(PAT_INPUT) \
+#	$(LINKER_FLAGS) $< -o $@
 
 $(D_TITLE): $(D_TITLE_CPP) $(D_TITLE_H)
 	$(CC) $(COMPILER_FLAGS) \
