--- a/makefile.pa_amb_tomaquet_dictionary
+++ b/makefile.pa_amb_tomaquet_dictionary
@@ -39,9 +39,9 @@ PAT_SPRITE_CPP=$(PAT_FOLDER)/Graphics/Sprite.cpp
 PAT_SPRITE=$(FILE_OBJECTS_FOLDER)/PAT_Sprite.o
 
 #Input folder
-PAT_CONTROLLER_H=$(PAT_INPUT)/Controller.h
+#PAT_CONTROLLER_H=$(PAT_INPUT)/PAT_Controller.h
 #PAT_CONTROLLER_CPP=$(INPUT)/Controller.cpp
-PAT_CONTROLLER=$(FILE_OBJECTS_FOLDER)/PAT_Controller.o
+#PAT_CONTROLLER=$(FILE_OBJECTS_FOLDER)/PAT_Controller.o
 
 #Utils folder
 PAT_LINKED_LIST_H=$(PAT_UTILS)/LinkedList.h
