--- a/DEMO/GameObjects/Player/makefile.player_rules
+++ b/DEMO/GameObjects/Player/makefile.player_rules
@@ -60,4 +60,9 @@ $(D_PLAYER_A_MOVE): $(D_PLAYER_A_MOVE_CPP) $(D_PLAYER_A_MOVE_H)
 	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) \
 	$(LINKER_FLAGS) $< -o $@
 
+$(D_PLAYER_A_PUNCH): $(D_PLAYER_A_PUNCH_CPP) $(D_PLAYER_A_PUNCH_H)
+	$(CC) $(COMPILER_FLAGS) \
+	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) \
+	$(LINKER_FLAGS) $< -o $@
+
 
