--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -15,7 +15,7 @@ COMPILER_FLAGS=-Wall -c -g
 #CC defines wich compiler will be used
 CC = g++
 LINKER_FLAGS = -lSDL2 -lSDL2_image `sdl2-config --cflags` -lSDL2_ttf
-# Y or N
+# Y in order to add DEBUG MODE
 DEBUG=Y
 
 ifeq ($(DEBUG),Y)
@@ -56,14 +56,6 @@ D_PAUSE_TEXT_CPP=./Scene/Pause/PauseText.cpp
 D_PAUSE_TEXT_H=./Scene/Pause/PauseText.h
 D_PAUSE_TEXT=$(FILE_OBJECTS_FOLDER)/PauseText.o
 
-#D_PAUSE_C_CPP=./Scene/Pause/PauseController.cpp
-#D_PAUSE_C_H=./Scene/Pause/PauseController.h
-#D_PAUSE_C=$(FILE_OBJECTS_FOLDER)/PauseController.o
-
-#D_SCENE_C_CPP=./Input/DemoSceneController.cpp
-#D_SCENE_C_H=./Input/DemoSceneController.h
-#D_SCENE_C=$(FILE_OBJECTS_FOLDER)/DemoSceneController.o
-
 include ./GameObjects/Player/makefile.player_dictionary
 
 PAT_OBJECTS=$(PAT_GAME_O) $(PAT_SCREEN_O) $(PAT_SCENE_M_O) $(PAT_SCENE_O) \
@@ -73,7 +65,7 @@ PAT_OBJECTS=$(PAT_GAME_O) $(PAT_SCREEN_O) $(PAT_SCENE_M_O) $(PAT_SCENE_O) \
 DEMO_OBJECTS=$(MAIN) $(DEMO) $(D_SCENE_M) $(D_SCENE) $(D_PLAYER) \
 	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_TITLE) $(D_PLAYER_S) \
 	$(D_PLAYER_S_MOVE) $(D_PLAYER_S_IDLE) $(D_PLAYER_A_IDLE) \
-	$(D_PLAYER_A_M) $(D_PLAYER_A_MOVE) \
+	$(D_PLAYER_A_M) $(D_PLAYER_A_MOVE) $(D_PLAYER_A_PUNCH) \
 
 TARGET=NISHIKIGOI_DEMO.out
 #$@ is a macro that refers to the target
@@ -112,14 +104,6 @@ $(D_SCENE): $(D_SCENE_CPP) $(D_SCENE_H)
 	-I./Scene/Pause/ \
 	$(LINKER_FLAGS) $< -o $@
 
-#$(D_SCENE_C): $(D_SCENE_C_CPP) $(D_SCENE_C_H)
-#	$(CC) $(COMPILER_FLAGS) \
-#	-I$(PAT_ANIM_KIN_OBJ) -I$(PAT_INPUT) -I$(PAT_GAME_OBJ) -I$(PAT_MATH) \
-#	-I$(PAT_GRAPHICS) -I$(PAT_UTILS) -I$(PAT_SCENE) -I$(PAT_ANIM_OBJ) \
-#	-I./GameObjects/Player/ -I./Scene/Pause/ \
-#	-I./GameObjects/Player/States/ -I./GameObjects/Player/Animations/ \
-#	$(LINKER_FLAGS) $< -o $@
-
 $(D_SCENE_P): $(D_SCENE_P_CPP) $(D_SCENE_P_H)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_SCENE) -I$(PAT_UTILS) -I$(PAT_GAME_OBJ) -I$(PAT_INPUT) \
@@ -130,11 +114,6 @@ $(D_PAUSE_TEXT): $(D_PAUSE_TEXT_CPP) $(D_PAUSE_TEXT_CPP)
 	$(CC) $(COMPILER_FLAGS) \
 	-I$(PAT_INPUT) -I$(PAT_GAME_OBJ) \
 	$(LINKER_FLAGS) $< -o $@
-
-#$(D_PAUSE_C): $(D_PAUSE_C_CPP) $(D_PAUSE_C_CPP)
-#	$(CC) $(COMPILER_FLAGS) \
-#	-I$(PAT_GAME_OBJ) -I$(PAT_INPUT) \
-#	$(LINKER_FLAGS) $< -o $@
 
 $(D_TITLE): $(D_TITLE_CPP) $(D_TITLE_H)
 	$(CC) $(COMPILER_FLAGS) \
