--- a/DEMO/GameObjects/Player/makefile.player_dictionary
+++ b/DEMO/GameObjects/Player/makefile.player_dictionary
@@ -40,3 +40,7 @@ D_PLAYER_A_MOVE_CPP=./GameObjects/Player/Animations/P_A_Move.cpp
 D_PLAYER_A_MOVE_H=./GameObjects/Player/Animations/P_A_Move.h
 D_PLAYER_A_MOVE=$(FILE_OBJECTS_FOLDER)/P_A_Move.o
 
+D_PLAYER_A_PUNCH_CPP=./GameObjects/Player/Animations/P_A_Punch.cpp
+D_PLAYER_A_PUNCH_H=./GameObjects/Player/Animations/P_A_Punch.h
+D_PLAYER_A_PUNCH=$(FILE_OBJECTS_FOLDER)/P_A_Punch.o
+
